# decs-cloud

./: .gitignore  Cargo.toml  Dockerfile.componentmgr  Dockerfile.gameloop  Dockerfile.shardmgr  Dockerfile.systemmgr  Dockerfile.usermgr  Makefile  README.md
component-mgr/: Cargo.toml  Dockerfile  Makefile
component-mgr/src/: lib.rs  msg.rs  store.rs
dashboard/: Dockerfile  README.md  index.html
dashboard/public/: index.html
dashboard/src/containers/DefaultLayout/: DefaultFooter.js  DefaultLayout.js
dashboard/src/views/Dashboard/: Dashboard.js  Leaderboard.js  ScoreEntry.js  Shard.js  ShardList.js  System.js  SystemList.js
decs-timer/: Cargo.toml
decs-timer/src/: lib.rs
decscloud-codec/: Cargo.toml  build.rs
decscloud-codec/src/: lib.rs  timer.proto
decscloud-common/: Cargo.toml  README.md
decscloud-common/src/: lib.rs
game-loop/: Cargo.toml  Dockerfile  Makefile
game-loop/src/: lib.rs  store.rs
samples/ticker/: Cargo.toml  Dockerfile  Makefile
samples/ticker/src/: lib.rs
shard-mgr/: Cargo.toml  Dockerfile  Makefile
shard-mgr/src/: lib.rs  msg.rs  store.rs
system-mgr/: Cargo.toml  Dockerfile  Makefile
system-mgr/src/: lib.rs  msg.rs  rest.rs  store.rs
testing/compose/: decs.yml  nginx-reverseproxy.yaml
user-mgr/: Cargo.toml  Dockerfile  Makefile
user-mgr/src/: lib.rs  msg.rs  store.rs
wascap-timer/: Cargo.toml
wascap-timer/src/: lib.rs
