[package]
name = "component-mgr"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
waxosuit-guest = "0.3.0"
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
decscloud-codec = { path = "../decscloud-codec" }
