[package]
name = "shard-mgr"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "dECS Cloud Shard Manager"

[lib]
crate-type = ["cdylib"]

[dependencies]
waxosuit-guest = "0.3.5"
decscloud-common = { path = "../decscloud-common" }
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
