[package]
name = "wascap-timer"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wascap-codec = "0.1.1"
#wascap-codec = { path = "../../wascap-codec" }
log = "0.4.8"
env_logger = "0.6"
crossbeam-channel = "0.3.9"
crossbeam = "0.7.2"
crossbeam-utils = "^0.6.6"
prost-types = "0.5.0"
natsclient = "0.0.5"
prost = "0.5.0"
decscloud-codec = { path = "../decscloud-codec" }