[package]
name = "ticker"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
waxosuit-guest = "0.3.5"
decscloud-common = { path = "../../decscloud-common" }

[profile.release]
# Optimize for small code size
opt-level = "s"
